# CyBoy

./: .gitignore  README.md  cmain.pyx  main.py  run.bat  run_clean.bat  setup.py
files/: Pokemon Blue.sav
files/logdiff/: diff.py
src/: CyBoy.pxd  CyBoy.pyx  system.pxd  system.pyx
src/apu/: gbapu.pxd  gbapu.pyx
src/apu/channels/: channel.pxd  channel.pyx  noise.pxd  noise.pyx  square.pxd  square.pyx  wave.pxd  wave.pyx
src/cpu/: arithmeticimpl.pxi  arithmeticinterp.pxi  bitopimpl.pxi  bitopinterp.pxi  branchimpl.pxi  branchinterp.pxi  gbcpu.pxd  gbcpu.pyx  gbimpl.pxi  gbinterp.pxd  gbinterp.pxi  loadimpl.pxi  loadinterp.pxi
src/cpu/generate/: generate.py  generator.py  impl.txt  interp.txt
src/frontend/: frontend.pxd
src/frontend/lib/: CMakeLists.txt  CyBoyFront.cpp  CyBoyFront.h  frontend.lib
src/generic/: macros.pxi
src/mem/: IO.pxd  IO.pxi  IO.pyx  mem.pxd  mem.pyx
src/mem/mappers/: MBC1.pxd  MBC1.pyx  MBC2.pxd  MBC2.pyx  MBC3.pxd  MBC3.pyx  MBC5.pxd  MBC5.pyx  mapper.pxd  mapper.pyx
src/ppu/: gbppu.pxd  gbppu.pyx  lcdio.pxi
src/scheduler/: scheduler.h  scheduler.pxd
